--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ hr{
     color: white;
     padding: 1rem;
     border-bottom-left-radius: 1rem;
-    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
 }
 
 .navigation .link{
