docs: added style
Used CSS to style my portfolio.

--- a/style.css
+++ b/style.css
@@ -118,6 +118,11 @@ hr{
     background-color: var(--light-grey);
 }
 
+.section p{
+    text-align: left;
+    padding: 0rem;
+}
+
 /**footer**/
 .footer{
     background-color: var(--primary-color);
